# game-of-life

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
golife/: grid.py  patterns.py  views.py
tests/: test_grid.py
