[tool.poetry]
name = "kvault"
version = "0.1.0"
description = "Simple Miniature key-value datastore"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gevent = "^23.7.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
black = "^23.11.0"
pre-commit = "^3.5.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
